# reinvent

./: CMakeLists.txt  LICENSE  README.md
doc/: aws_ena_packet_design.md  aws_ena_setup.md  equinix_mellanox_setup.md  kv_rpc_design.md  packet_design.md  static_route_packet_design.md
experiment/packet_flow/: flow.txt  queue.cpp
experiment/timely/: README.md  common.h  main.cpp  mkit  timely.h  timely_sweep_params.h
experiment/timely_redux/: README.md  log  main.cpp  mkit  test.cpp  timely.h  timer.h
integration_tests/: CMakeLists.txt
integration_tests/reinvent_dpdk_static_route_udp/: CMakeLists.txt  reinvent_dpdk_static_route_udp_test.cpp  reinvent_dpdk_static_route_udp_test_client.cpp  reinvent_dpdk_static_route_udp_test_common.cpp  reinvent_dpdk_static_route_udp_test_common.h  reinvent_dpdk_static_route_udp_test_spsc.cpp  reinvent_dpdk_static_route_udp_test_spsc.h
integration_tests/reinvent_dpdk_udp/: CMakeLists.txt  libperf.c  libperf.h  reinvent_dpdk_udp_integration_test.cpp
integration_tests/reinvent_sriov_udp/: CMakeLists.txt  main.cpp  reinvent_sriov_udp_integration_test.cpp
integration_tests/reinvent_static_route_udp/: CMakeLists.txt  client.cpp  common.cpp  common.h  main.cpp  reinvent_dpdk_static_route_udp_test_common.h  reinvent_dpdk_static_route_udp_test_server.cpp  server.cpp  spsc.cpp
integration_tests/reinvent_udp/: CMakeLists.txt  CommFunc.cpp  CommFunc.h
integration_tests/reinvent_util_errno/: CMakeLists.txt  main.cpp
integration_tests/reinvent_util_log/: CMakeLists.txt  main_mt.cpp  reinvent_util_log_integration_test.cpp
performance_tests/: CMakeLists.txt
performance_tests/reinvent_perf_test1/: CMakeLists.txt  test1.cpp
scripts/: cpu_inventory_config  install  line2words  mkncatdata  ncatperf  nic_inventory_config  ram_inventory_config  reinvent_dpdk_static_route_udp_integration_test  reinvent_dpdk_udp_benchmark_integration_test  reinvent_dpdk_udp_integration_test  reinvent_dpdk_udp_integration_test_multiple  reinvent_sriov_udp_integration_test  reinvent_static_route_udp_integration_test  reinvent_udp_integration_test  runpmd  setup  v
scripts/sriov/: inteln3  n3  novlan  post  post_n3  pre  pre_dev  pre_n3  simple  tst1  vlan
src/: CMakeLists.txt
src/reinvent/: CMakeLists.txt
src/reinvent/dpdk/: reinvent_dpdk_awsconfig.cpp  reinvent_dpdk_awsconfig.h  reinvent_dpdk_awsworker.cpp  reinvent_dpdk_awsworker.h  reinvent_dpdk_config.cpp  reinvent_dpdk_config.h  reinvent_dpdk_init.cpp  reinvent_dpdk_init.h  reinvent_dpdk_initaws.cpp  reinvent_dpdk_initaws.h  reinvent_dpdk_ipv4route.cpp  reinvent_dpdk_ipv4route.h  reinvent_dpdk_lcore.cpp  reinvent_dpdk_lcore.h  reinvent_dpdk_names.cpp  reinvent_dpdk_names.h  reinvent_dpdk_rxq.cpp  reinvent_dpdk_rxq.h  reinvent_dpdk_stream.cpp  reinvent_dpdk_stream.h  reinvent_dpdk_txq.cpp  reinvent_dpdk_txq.h  reinvent_dpdk_udproute.cpp  reinvent_dpdk_udproute.h  reinvent_dpdk_uninitaws.cpp  reinvent_dpdk_uninitaws.h  reinvent_dpdk_util.cpp  reinvent_dpdk_util.h  reinvent_dpdk_vcpu.cpp  reinvent_dpdk_vcpu.h  reinvent_dpdk_worker.cpp  reinvent_dpdk_worker.h
src/reinvent/perf/: reinvent_perf_rdpmc.cpp  reinvent_perf_rdpmc.h
src/reinvent/util/: reinvent_util_environment.cpp  reinvent_util_environment.h  reinvent_util_errno.cpp  reinvent_util_errno.h  reinvent_util_log.cpp  reinvent_util_log.h
unit_tests/: CMakeLists.txt
unit_tests/reinvent_util_environment/: CMakeLists.txt  README  reinvent_util_environment_int_test_cases.py  reinvent_util_environment_intlist_test_cases.py  reinvent_util_environment_str_test_cases.py  reinvent_util_environment_unit_test.cpp  reinvent_util_environment_unit_test_int.cpp  reinvent_util_environment_unit_test_int_data.cpp  reinvent_util_environment_unit_test_int_data.h  reinvent_util_environment_unit_test_intlist.cpp  reinvent_util_environment_unit_test_intlist_data.cpp  reinvent_util_environment_unit_test_intlist_data.h  reinvent_util_environment_unit_test_str.cpp  reinvent_util_environment_unit_test_str_data.cpp  reinvent_util_environment_unit_test_str_data.h
unit_tests/reinvent_util_errno/: CMakeLists.txt  reinvent_util_errno_unit_test.cpp
